--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -1,3 +1,30 @@
 spring:
     application:
         name: user
+    datasource:
+        url: ${SPRING_DATASOURCE_URL}
+        driverClassName: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+        username: ${SPRING_DATASOURCE_USERNAME}
+        password: ${SPRING_DATASOURCE_PASSWORD}
+    jpa:
+        hibernate:
+            ddl-auto: update
+        show-sql: true
+        properties:
+            hibernate:
+                format_sql: true
+        database: mysql
+        database-platform: org.hibernate.dialect.MySQLDialect
+
+server:
+    port: ${PORT:8081}
+    servlet:
+        context-path: /api/v1
+
+application:
+    security:
+        jwt:
+            secret-key: ${JWT_SECRET_KEY}
+            expiration: 86400000 # 24 giờ (ms)
+            refresh-token:
+                expiration: 604800000 # 7 ngày (ms)
