--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
         name: user
     datasource:
         url: ${SPRING_DATASOURCE_URL}
-        driverClassName: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+        driverClassName: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
         username: ${SPRING_DATASOURCE_USERNAME}
         password: ${SPRING_DATASOURCE_PASSWORD}
     jpa:
@@ -13,18 +13,23 @@ spring:
         properties:
             hibernate:
                 format_sql: true
-        database: mysql
-        database-platform: org.hibernate.dialect.MySQLDialect
+#        database: mysql
+#        database-platform: org.hibernate.dialect.MySQLDialect
 
 server:
     port: ${PORT:8081}
     servlet:
         context-path: /api/v1
 
+security:
+    cors:
+        allowed-origins: ${CORS_ALLOWED_ORIGINS:}
+        allowed-methods: ${CORS_ALLOWED_METHODS:*}
+        allowed-headers: ${CORS_ALLOWED_HEADERS:*}
 application:
     security:
         jwt:
-            secret-key: ${JWT_SECRET_KEY}
+            secret-key: ${JWT_SECRET_KEY} # 32 bytes key
             expiration: 86400000 # 24 giờ (ms)
             refresh-token:
                 expiration: 604800000 # 7 ngày (ms)
