--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -1,6 +1,34 @@
 server:
-    port: ${PORT:8888}
+    port: ${PORT:8080}
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
+    endpoint:
+        gateway:
+            access: read_only
 
 spring:
+    cloud:
+        gateway:
+                routes:
+                    - id: user-service
+                      uri: lb://USER-SERVICE
+                      predicates:
+                          - Path=/api/v1/users/**
+                      filters:
+                          - StripPrefix=2
+
     application:
-        name: api-gateway
+        name: API-GATEWAY
+
+eureka:
+    client:
+        service-url:
+            defaultZone: ${DEFAULT_REGIS:http://localhost:8761/eureka/}
+
+logging:
+    level:
+        org.springframework.cloud.gateway: DEBUG
+        org.springframework.web: DEBUG
