--- a/accountant/src/main/resources/application.yaml
+++ b/accountant/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
 spring:
     application:
-        name: user
+        name: ACCOUNTANT
+
+    datasource:
+        url: ${URL:"jdbc:mysql://localhost:3306/hms_db"}
+        username: ${USERNAME:root}
+        password: ${PASSWORD:root}
+        driver-class-name: "com.mysql.cj.jdbc.Driver"
+    jpa:
+        hibernate:
+          ddl-auto: update
+        open-in-view: false
