--- a/accountant/src/main/resources/application.yaml
+++ b/accountant/src/main/resources/application.yaml
@@ -3,10 +3,10 @@ spring:
         name: ACCOUNTANT
 
     datasource:
-        url: ${URL:"jdbc:mysql://localhost:3306/hms_db"}
+        url: ${URL:jdbc:mysql://localhost:3306/hms_db}
         username: ${USERNAME:root}
         password: ${PASSWORD:root}
-        driver-class-name: "com.mysql.cj.jdbc.Driver"
+        driverClassName: "com.mysql.cj.jdbc.Driver"
     jpa:
         hibernate:
           ddl-auto: update
