--- a/appointment/src/main/resources/application.yaml
+++ b/appointment/src/main/resources/application.yaml
@@ -1,3 +1,22 @@
+server:
+    port: ${PORT:8082}
+
 spring:
     application:
-        name: appointment
+        name: APPOINTMENT-SERVICE
+
+    datasource:
+        url: ${SPRING_DATASOURCE_URL}
+        driverClassName: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
+        username: ${SPRING_DATASOURCE_USERNAME}
+        password: ${SPRING_DATASOURCE_PASSWORD}
+    jpa:
+        hibernate:
+            ddl-auto: update
+        open-in-view: false
+        show-sql: true
+eureka:
+    client:
+        service-url:
+            defaultZone: ${DEFAULT_REGIS:http://localhost:8761/eureka/}
+
